--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,7 +3,18 @@
 @tailwind utilities;
 
 @layer base {
-    html {
-        @apply bg-green-50/[0.5];
-    }
+  html {
+    /* @apply bg-green-50/[0.5]; */
+  }
+
+  input:focus,
+  select:focus,
+  textarea:focus,
+  button:focus {
+    outline: none !important;
+    outline-width: 0 !important;
+    box-shadow: none;
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+  }
 }
