--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,20 +1,51 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer base {
-  html {
-    /* @apply bg-green-50/[0.5]; */
-  }
+    html {
+        /* @apply bg-green-50/[0.5]; */
+    }
 
-  input:focus,
-  select:focus,
-  textarea:focus,
-  button:focus {
-    outline: none !important;
-    outline-width: 0 !important;
-    box-shadow: none;
-    -moz-box-shadow: none;
-    -webkit-box-shadow: none;
-  }
+    input:focus,
+    select:focus,
+    textarea:focus,
+    button:focus {
+        outline: none 0 !important;
+        box-shadow: none;
+        -moz-box-shadow: none;
+        -webkit-box-shadow: none;
+    }
+
+    @font-face {
+        font-family: Intro;
+        font-weight: 100;
+        src: local('Intro'), url(/fonts/intro/intro_thin.woff2) format("woff");
+    }
+
+    @font-face {
+        font-family: Intro;
+        font-weight: 300;
+        src: url(/fonts/intro/intro_light.woff2) format("woff");
+    }
+
+    @font-face {
+        font-family: Intro;
+        font-weight: 400;
+        src: url(/fonts/intro/intro_regular.woff2) format("woff");
+    }
+
+    @font-face {
+        font-family: Intro;
+        font-weight: 700;
+        src: url(/fonts/intro/intro_bold.woff2) format("woff");
+    }
+
+    @font-face {
+        font-family: Intro;
+        font-weight: 900;
+        src: url(/fonts/intro/intro_black.woff2) format("woff");
+    }
 }
