--- a/src/pages/globals.scss
+++ b/src/pages/globals.scss
@@ -5,47 +5,47 @@
 @tailwind utilities;
 
 @layer base {
-    html {
-        @apply font-roboto;
-    }
+  html {
+    @apply font-roboto text-gray-900;
+  }
 
-    input:focus,
-    select:focus,
-    textarea:focus,
-    button:focus {
-        outline: none 0 !important;
-        box-shadow: none;
-        -moz-box-shadow: none;
-        -webkit-box-shadow: none;
-    }
+  input:focus,
+  select:focus,
+  textarea:focus,
+  button:focus {
+    outline: none 0 !important;
+    box-shadow: none;
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+  }
 
-    @font-face {
-        font-family: Intro;
-        font-weight: 100;
-        src: local('Intro'), url(/fonts/intro/intro_thin.woff2) format("woff");
-    }
+  @font-face {
+    font-family: Intro;
+    font-weight: 100;
+    src: local('Intro'), url(/fonts/intro/intro_thin.woff2) format("woff");
+  }
 
-    @font-face {
-        font-family: Intro;
-        font-weight: 300;
-        src: url(/fonts/intro/intro_light.woff2) format("woff");
-    }
+  @font-face {
+    font-family: Intro;
+    font-weight: 300;
+    src: url(/fonts/intro/intro_light.woff2) format("woff");
+  }
 
-    @font-face {
-        font-family: Intro;
-        font-weight: 400;
-        src: url(/fonts/intro/intro_regular.woff2) format("woff");
-    }
+  @font-face {
+    font-family: Intro;
+    font-weight: 400;
+    src: url(/fonts/intro/intro_regular.woff2) format("woff");
+  }
 
-    @font-face {
-        font-family: Intro;
-        font-weight: 700;
-        src: url(/fonts/intro/intro_bold.woff2) format("woff");
-    }
+  @font-face {
+    font-family: Intro;
+    font-weight: 700;
+    src: url(/fonts/intro/intro_bold.woff2) format("woff");
+  }
 
-    @font-face {
-        font-family: Intro;
-        font-weight: 900;
-        src: url(/fonts/intro/intro_black.woff2) format("woff");
-    }
+  @font-face {
+    font-family: Intro;
+    font-weight: 900;
+    src: url(/fonts/intro/intro_black.woff2) format("woff");
+  }
 }
